--- a/hometemplatepage.html
+++ b/hometemplatepage.html
@@ -19,5 +19,68 @@
     <abbr title="anyone can code">ACC</abbr> is the <strong style="font-size: 25px" >moto</strong> of this site.
 </blockquote>
 </p>
+<p style="color: white">
+package main
+
+import (
+"fmt"
+"github.com/globalsign/mgo"
+"github.com/globalsign/mgo/bson"
+"log"
+)
+
+type Student struct {
+Name   string     `bson:"name"`
+Age    int        `bson:"age"`
+Mark   int        `bson:"mark"`
+
+}
+
+func main() {
+st:=[]Student{
+{"tfk", 22, 95},
+{"iron man",45,66},
+{"edith",2,100},
+{"tony",45,100},
+{"thor",55,90},
+{"hulk",55,98},
+{"cap",60,88},
+}
+
+session,err:=mgo.Dial("localhost:27017")
+if err != nil {
+return
+}
+con:=session.DB("Task").C("students")
+
+len, err := con.Count()
+if err != nil {
+return
+}
+log.Println("len :",len)
+
+fmt.Println("Connected to MongoDB!")
+for _,record:= range st {
+in, _ :=con.Upsert(record,record)
+if in != nil {
+fmt.Println(err)
+}
+}
+var res []Student
+err = con.Find(bson.M{}).All(&res)
+if err != nil {
+return
+}
+//fmt.Println(res)
+fmt.Println("inserted: ", res)
+
+}
+//Rverse
+func Reverse{
+for i,j:=0,len(a)-1;i < j ;i,j=i+1,j-1{
+a[i],a[j]=a[j],a[i]
+}
+}
+</p>
 </body>
 </html>
